manifests/db_tester_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db-tester
  name: db-tester
  namespace: sample
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: db-tester
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: db-tester
    spec:
      containers:
      - name: db-tester
        image: satishing/db_tester:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
