manifests/mysql_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-server
  name: mysql-server
  namespace: sample
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mysql-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql-server
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
