manifests/db_tester_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-tester
  name: db-tester
  namespace: sample
spec:
  selector:
    app: db-tester
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
